--- a/final_project/pubspec.yaml
+++ b/final_project/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   google_fonts: ^6.2.1
   onesignal_flutter: ^5.3.3
   skeletonizer: ^2.0.1
+  smooth_page_indicator: ^1.2.1
 
   cupertino_icons: ^1.0.8
 
