--- a/final_project/ios/Runner/Info.plist
+++ b/final_project/ios/Runner/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>GOOGLE_MAPS_IOS_KEY</key>
+<string>${GOOGLE_MAPS_IOS_KEY}</string>
 	<key>CFBundleDisplayName</key>
 	<string>Final Project</string>
 	<key>CFBundleExecutable</key>
