--- a/final_project/pubspec.yaml
+++ b/final_project/pubspec.yaml
@@ -28,12 +28,17 @@ dependencies:
   flutter_chat_ui: ^2.5.2
   flutter_switch: ^0.3.2
   fl_chart: ^1.0.0
+  dart_mappable: ^4.5.0
+  pinput: ^5.0.1
+  slide_countdown: ^2.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^5.0.0
+  build_runner: ^2.5.4
+  dart_mappable_builder: ^4.5.0
 flutter:
 
   uses-material-design: true
