--- a/final_project/pubspec.yaml
+++ b/final_project/pubspec.yaml
@@ -22,11 +22,14 @@ dependencies:
   smooth_page_indicator: ^1.2.1
   table_calendar: ^3.2.0
   google_maps_flutter: ^2.12.3
+  
+
 
   cupertino_icons: ^1.0.8
   flutter_chat_core: ^2.6.1
   flutter_chat_ui: ^2.5.2
   flutter_switch: ^0.3.2
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
