--- a/final_project/pubspec.yaml
+++ b/final_project/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   pinput: ^5.0.1
   slide_countdown: ^2.0.2
   image_picker: ^1.1.2
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
