--- a/final_project/pubspec.yaml
+++ b/final_project/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
   smooth_page_indicator: ^1.2.1
   table_calendar: ^3.2.0
   google_maps_flutter: ^2.12.3
-  
+  equatable: ^2.0.7
 
 
   cupertino_icons: ^1.0.8
@@ -34,6 +34,10 @@ dependencies:
   pinput: ^5.0.1
   slide_countdown: ^2.0.2
   image_picker: ^1.1.2
+  dart_mappable_builder: ^4.5.0
+  dartz: ^0.10.1
+  flutter_image_compress: ^2.4.0
+  
 
 dev_dependencies:
   flutter_test:
@@ -41,7 +45,7 @@ dev_dependencies:
 
   flutter_lints: ^5.0.0
   build_runner: ^2.5.4
-  dart_mappable_builder: ^4.5.0
+  
 flutter:
 
   uses-material-design: true
