--- a/final_project/pubspec.yaml
+++ b/final_project/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   table_calendar: ^3.2.0
   google_maps_flutter: ^2.12.3
   
+  
 
 
   cupertino_icons: ^1.0.8
@@ -34,6 +35,8 @@ dependencies:
   pinput: ^5.0.1
   slide_countdown: ^2.0.2
   image_picker: ^1.1.2
+  moyasar: ^2.0.18
+
 
 dev_dependencies:
   flutter_test:
