--- a/final_project/pubspec.yaml
+++ b/final_project/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   smooth_page_indicator: ^1.2.1
   table_calendar: ^3.2.0
   google_maps_flutter: ^2.12.3
+  geocoding: ^2.1.0
   equatable: ^2.0.7
 
   
