--- a/final_project/android/app/src/main/AndroidManifest.xml
+++ b/final_project/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <application
-        android:label="final_project"
+        android:label="تجمّل"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
 
