--- a/final_project/ios/Runner/Info.plist
+++ b/final_project/ios/Runner/Info.plist
@@ -9,7 +9,7 @@
 <key>NSPhotoLibraryUsageDescription</key>
 <string>We need access to your gallery to upload service images.</string>
 	<key>CFBundleDisplayName</key>
-	<string>final_project</string>
+	<string>تجمّل</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
