--- a/final_project/pubspec.yaml
+++ b/final_project/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   
   moyasar: ^2.0.18
 
+  provider: ^6.1.5
+  url_launcher: ^6.3.2
+
 
 dev_dependencies:
   flutter_test:
@@ -68,3 +71,4 @@ flutter:
     - assets/icons/
     - assets/translations/
     - .env
+    - assets/map/map_style.json
