--- a/final_project/android/app/src/main/AndroidManifest.xml
+++ b/final_project/android/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/Maps_ANDROID_KEY" /> <meta-data
+            android:value="AIzaSyAfQwWHDmDUwtWANbChCZs5NhdYNsvxz9U" /> <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
     </application>
