--- a/final_project/pubspec.yaml
+++ b/final_project/pubspec.yaml
@@ -24,9 +24,9 @@ dependencies:
   google_maps_flutter: ^2.12.3
   geocoding: ^2.1.0
   equatable: ^2.0.7
-
-  
-
+  flutter_map: ^6.0.0
+  latlong2: ^0.9.0
+  http: ^1.2.0
 
   cupertino_icons: ^1.0.8
   flutter_chat_core: ^2.6.1
@@ -44,27 +44,23 @@ dependencies:
   flutter_image_compress: ^2.4.0
   another_flushbar: ^1.10.29
   loading_animation_widget: ^1.3.0
-  
   moyasar: ^2.0.18
-
   provider: ^6.1.5
   url_launcher: ^6.3.2
-
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   flutter_lints: ^5.0.0
   build_runner: ^2.5.4
-  flutter_launcher_icons: ^0.14.4
-flutter_launcher_icons:
+  flutter_launcher_icons: ^0.11.0 
+
+flutter_icons: 
   android: true
   ios: true
   image_path: "assets/icons/app_logo.png"
-  
-flutter:
 
+flutter:
   uses-material-design: true
 
   assets:
